Architecture of Multi-Service Apps/infra/k8s/auth-src.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
